test/fixtures/configs/projects/get/discoverByLanguage/fail/params/language.js
exports.changeLanguageNonsense = {
  url: '/discover/-.@',
  method: 'get'
};

exports.changeLanguageNewline = {
  url: '/discover/-.@',
  method: 'get'
};

exports.changeLanguageNumber = {
  url: '/discover/2',
  method: 'get'
};
